--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,19 +12,20 @@
 
 
 
-<title>Title</title>
+<title>Empco-Lite</title>
 </head>
 <body>
 
     <nav class="navbar">
         <div class="topBar">
-            <img id="nav-logo" src="/static/Empco-Lite-black-lightning-07.png" height="100%" width="100%">
+            <img id="nav-logo" src="/static/Empco-Lite-logo-07.png" height="100%" width="100%">
             <img id="nav-logo" src="/static/made-in-usa-stamp.png" height="50%" width="50%">
         </div>
             <i class="uil uil-bars toggle"></i>
         </div>
         <ul class="navMenu">
             <li><a href="{{ url_for('index') }}">Home</a></li>
+            <li><a href="{{ url_for('sister_companies') }}">Divisions</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
             <li><a href="{{ url_for('product_line') }}">Product Line</a></li>
             <li><a href="{{ url_for('contact') }}">Contact</a></li>
@@ -84,8 +85,8 @@
                     <div class="row">
                         <div class="col-xl-4 col-lg-4 mb-50">
                             <div class="footer-widget">
-                                <div class="footer-logo mt-40">
-                                    <a href="{{ url_for('index') }}"><img src="/static/Empco-Lite-04.png" class="img-fluid" alt="logo"></a>
+                                <div class="footer-logo mt-40 mb60">
+                                    <a href="{{ url_for('index') }}"><img src="/static/Empco-Lite-logo-07.png" class="img-fluid" alt="logo"></a>
                                 </div>
                                 <div class="footer-text mt-40">
                                     <p>Our goal is to provide the highest quality lighting and complementary products at competitive prices, always keeping the customer in mind. </p>
