--- a/app/templates/product_line.html
+++ b/app/templates/product_line.html
@@ -13,10 +13,19 @@
 </div>
 
 
+<section class="hero-section">
 
-
-<section class="hero-section ">
     <div class="card-grid mt80">
+      <h2 class="medium-title">Your Lighting Needs are Covered</h2>
+
+      <a class="card" href="{{ url_for('highway_construction_lighting') }}">
+        <div class="card__background" style="background-image: url(/static/pexels/pexels-ave-calvar-martinez-4705093.jpg)"></div>
+        <div class="card__content">
+          
+          <h3 class="card__heading">Highway Lighting</h3>
+        </div>
+      </a>
+      
       <a class="card" href="{{ url_for('airport_lighting') }}">
         <div class="card__background" style="background-image: url(/static/pexels/pexels-igor-starkov-761981.jpg)"></div>
         <div class="card__content">
@@ -40,13 +49,6 @@
         </div>
       </a>
 
-      <a class="card" href="{{ url_for('highway_construction_lighting') }}">
-        <div class="card__background" style="background-image: url(/static/pexels/pexels-ave-calvar-martinez-4705093.jpg)"></div>
-        <div class="card__content">
-          
-          <h3 class="card__heading">Highway Lighting</h3>
-        </div>
-      </a>
     
 </section>
 
