--- a/app/static/main.css
+++ b/app/static/main.css
@@ -761,7 +761,9 @@ footer ul {
 
 .product-line-container{
   background-color: #f2cb05;
-  padding: 50px; 
+  padding: 50px;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 0 rgba(236, 116, 10, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24); 
 }
 
 .overlay-product-line{
@@ -1150,7 +1152,7 @@ footer ul {
  
 
 
-/* Contacat Profiles */
+/* Contact Profiles */
   
   .profile-card{
     margin-bottom:60px;
@@ -1351,6 +1353,7 @@ footer ul {
       padding: 20px;  
     }
     .bg-light { background-color: black; color: white;  }
+    .bg-yellow { background-color: #f2e74b;}
     .neutral-primary{background-color: whitesmoke; color: black;}
     .bg-primary { background-image: linear-gradient(15deg, #F2F2F2 0%, #f2e74b 150%); }
     .bg-default { background-color: white; color: black; }
@@ -1381,15 +1384,16 @@ footer ul {
     
 
 
-    /* TEST */
+   /* PRODUCT LINE PAGE (AIRPORT, ROAILROAD, MARINE, HIGHWAY */
 
     .hero-section{
         align-items: flex-start;
-        background-color: black; 
+        background-color: whitesmoke;  
         display: flex;
         min-height: 100%;
         justify-content: center;
-        padding: 2rem;
+        align-items: center;
+        padding: 3.0rem;
       }
       
       .card-grid{
@@ -1409,7 +1413,7 @@ footer ul {
       
       @media(min-width: 960px){
         .card-grid{
-          grid-template-columns: repeat(4, 1fr); 
+          grid-template-columns: repeat(5, 1fr); 
         }
       }
       
@@ -1422,15 +1426,15 @@ footer ul {
       .card:before{
         content: '';
         display: block;
-        background-color: black;
-        padding-bottom: 150%;
+        background-color: whitesmoke;
+        padding-bottom: 120%;
         width: 100%;
       }
       
       .card__background{
         background-size: cover;
         background-position: center;
-        border-radius: 2rem;
+        border-radius: 5px;
         bottom: 0;
         filter: brightness(0.75) saturate(1.2) contrast(0.85);
         left: 0;
@@ -1454,16 +1458,16 @@ footer ul {
       
       .card__content{
         left: 0;
-        padding: 1rem;
+        padding: 3rem;
         position: absolute;
         top: 0;
       }
       
       .card__heading{
-        color: white;
-        background-color: rgba(32, 32, 31, 0.446); 
-        border-radius: 2rem;
-        font-size: 2.0rem;
+        color: black; 
+        background-color: #f2e74b;
+        border-radius: 5px;
+        font-size: 1.5rem;
         font-family: 'Lato', sans-serif;
         text-shadow: 2px 2px 20px rgba(0,0,0,0.2);
         line-height: 1.4;
@@ -2351,6 +2355,17 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
   background-color: none; 
 }
 
+.medium-title{
+  font-size: 4em;
+  margin-bottom: 3rem; 
+  font-weight: 800;
+  color: black; 
+  line-height: 1em;
+  text-transform: uppercase;
+  font-family: 'PT Sans', sans-serif;
+
+}
+
 .mission-title{
   font-size: 5em;
   margin-bottom: 3rem; 
@@ -2781,11 +2796,11 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
   content: "";
   display: block;
   position: absolute;
-  right: -5%;
-  top: 0;
+  right: -10%;
+  top: 20;
   width: 50%;
-  height: 100%;
-  background: white;       
+  height: 70%;
+  background-image: url("/static/plant_pictures/IMG_7462_Fotor.jpg");       
   -webkit-animation: untransform normal 1 1.25s 0.9375s cubic-bezier(0.33, 1, 0.68, 1) forwards;
           animation: untransform normal 1 1.25s 0.9375s cubic-bezier(0.33, 1, 0.68, 1) forwards;
 }
@@ -2797,9 +2812,10 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
   position: absolute;
   left: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
-  background: white; 
+  width: 50%;
+  height: 70%;
+  background-image: url("/static/plant_pictures/IMG_7462_Fotor.jpg");       
+ 
   -webkit-animation: untransform normal 1 1.5625s 0.3125s cubic-bezier(0.33, 1, 0.68, 1) forwards;
           animation: untransform normal 1 1.5625s 0.3125s cubic-bezier(0.33, 1, 0.68, 1) forwards;
   z-index: -1;
