--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -8,7 +8,6 @@
         <span>
             About Empco-Lite
             
-
         </span>
     </h2>
     <p class="hero__copy">
@@ -17,35 +16,53 @@
 
 </section>
 
+
+<div class="grid">
+
+
+    <section class="">
+        <div class="container left">
+        <h1 class="mission-title" >Mission Statement</h1>
+        <p class="mission-statement">The mission of Elgin Molded Plastics, Empco-Lite, and AKT Corporation is to fully satisfy the
+            expectations of our customers by producing the highest quality products on time, each and every
+            time, through the use of effective teamwork, employee involvement, and a dedication to excellence
+            in everything we do with a view of continuous improvement.</p>
+        </div>
+    </section>
+
+    <section class="bg-default text--center  align-center font">
+        <div>
+            <h3>See how it all comes together</h3>
+            <a href="{{ url_for('sister_companies') }}" class="btn">Our Divisions</a>
+        </div>
+    </section>
+
+
+</div>
+
 <span id="about">
 
-    <div class="big-image-quality">
-        <div class="overlay">
-          <h1>Quality With Integrity</h1>
-          
-        </div>
-    </div>
     
 
     
     <section class="section--dark text-center pinside80">
         <div class="about-container">
-        <div class="col-3 features">
-            <i class="fa fa-bolt"></i>
+        <div class="col-3">
+            <i class="fa fa-bolt mb60"></i>
             <h3>
             Elgin Molded
             </h3>
             <p>Where it all began (Custom Injection Molding)</p>
         </div>
-        <div class="col-3 features">
-            <i class="fa fa-bolt"></i>
+        <div class="col-3 ">
+            <i class="fa fa-bolt mb60"></i>
             <h3>
             Empco-Lite 
             </h3>
             <p>Airport, Marine, and Railroad Lighting</p>
         </div>
-        <div class="col-3 features">
-            <i class="fa fa-bolt"></i>
+        <div class="col-3 ">
+            <i class="fa fa-bolt mb60"></i>
             <h3>
             AKT Corporation 
             </h3>
@@ -56,28 +73,64 @@
     
 </span>
 
-<div class="grid">
+ <!-- WHY PEOPLE CHOOSE US -->
+ <div class="section-space80">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="mb60 mt40  section-title">
+                    <div class='grid'>
+                        <div class="flex">
+                            <h1 class=" mission-title mt60"> Core Values</h1>
+                        </div>
+                        <h3 class="subheading text-center  mt60"> Empco-Lite has the most skilled and dedicated team of professionals in the lighting industry. With the stability of over 50 years in business, our core-values and our team are our most valued assets and the reason for our growth and success.</h3>
 
-
-        <section class="">
-            <div class="container left">
-            <h1 class="mission-title" >Mission Statement</h1>
-            <p class="mission-statement">The mission of Elgin Molded Plastics, Empco-Lite, and AKT Corporation is to fully satisfy the
-                expectations of our customers by producing the highest quality products on time, each and every
-                time, through the use of effective teamwork, employee involvement, and a dedication to excellence
-                in everything we do with a view of continuous improvement.</p>
+                    </div>
+                </div>
+                <!-- /.section title start-->
             </div>
-        </section>
+        </div>
 
-        <section class="bg-default text--center  align-center font">
-            <div>
-                <h3>See how it all comes together</h3>
-                <a href="{{ url_for('sister_companies') }}" class="btn">Our Divisions</a>
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="bg-white bg-boxshadow">
+                    <div class="row">
+                        
+
+                        <div class="col-md-4 col-sm-6 nopadding col-xs-12">
+                            <div class="bg-white pinside60 number-block outline">
+                                <div class="mb10"><i class="icon-cup  icon-4x icon-primary"></i></div>
+                                <img  class="mb20" src="/static/icons/ribbon-icons-02.png" height="50%" width="50%">
+                                <h3>Reliability</h3>
+                                <p> Family-owned, 70+ years in business, all products are American-made</p>
+                                <a href="{{ url_for('sister_companies') }}" class="btn btn-outline mt20">about Empco-Lite</a> </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12 nopadding col-xs-12">
+                            <div class="bg-white pinside60 number-block outline">
+                                <div class="mb10"><i class="icon-calculator  icon-4x icon-primary"></i></div>
+                                <img class="mb20" src="/static/icons/icons-02.png" height="50%" width="50%">
+                                <h3>Pride in our Work</h3>
+                                <p> We are committed to producting high-quality products</p>
+                                <a href="{{ url_for('process') }}" class="btn btn-outline mt20">Our Process</a> </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 nopadding col-xs-12">
+                            <div class="bg-white pinside60 number-block outline">
+                                <div class="mb10"><i class="icon-command  icon-4x icon-primary"></i></div>
+                                <img class="mb20" src="/static/icons/icons-04.png" height="50%" width="50%">
+                                <h3>Communication</h3>
+                                <p>Our dedicated reps focus on clear and concise customer communication</p>
+                                <a href="{{ url_for('contact') }}" class="btn btn-outline mt20">Meet the team</a> </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
-        </section>
-
-    
+        </div>
+    </div>
 </div>
+
+
 
 
 <div class="big-image-oldworld">
