--- a/app/templates/lighting_types/highway_construction_lighting.html
+++ b/app/templates/lighting_types/highway_construction_lighting.html
@@ -4,6 +4,12 @@
 {% block content %}
 
 
+<div class="wrapper product-line"> 
+    <div class="mt80 mb40"><h1>Highway Lighting</h1></div>
+</div>
+        
+
+
 
 
 <div class="wrapper product-line"> 
