--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -12,7 +12,7 @@
     </h2>
     <p class="hero__copy">
         At Empco-Lite, we are proud to be soley focused on manufacturing and supplying airport, marine, railroad, and highway lighting products. When you turn to Empco-Lite for your lighting needs, you’ll discover we are the ideal size. 
-            We are large enough to handle your work, but small enough that you wont get lost in the shuffle. Excellent customer service is only part of our deal. The real magic happens when excellent customer service meets high-quality products, which is exactly why our products are trusted by the biggest names in the industry, like the Department of Transportation and Highway Contractors. </p>
+            We are large enough to handle your work, but small enough that you wont get lost in the shuffle. Excellent customer service is only part of our deal. The real magic happens when excellent customer service meets high-quality products, which is exactly why our products are trusted by the biggest names in the industry, like the National Highway Safety Administration, American Traffic Safety Services Association, Flasher Barricade Association, and the Transportation Safety Equipment Institute. </p>
 
 </section>
 
@@ -136,8 +136,8 @@
 <div class="big-image-oldworld">
     <div class="overlay-oldworld">
         <div class="oldworld-container">
-            <h1>"Old-World" Apprenticeship</h1>
-            <h3>AKT and Empco-lite products are made right in our own turf, at Elgin Molded</h3>
+            <h1>Our Process</h1>
+            <h3>Empco-lite products are made right on our own turf, at Elgin Molded</h3>
             <a href="{{ url_for('process') }}" class="btn-2">Learn More</a>
         </div>
     </div>
