--- a/app/templates/airport/model_630.html
+++ b/app/templates/airport/model_630.html
@@ -9,7 +9,7 @@
         <input type="radio" name="radio-btn" id="img-1" checked />
         <li class="slide-container">
         <div class="slide">
-          <img src="/static/model_2006/1.jpg" />
+          <img src="/static/airport_lighting/Model630AirportLight.jpg" />
             </div>
         <div class="nav">
           <label for="img-6" class="prev">&#x2039;</label>
@@ -17,49 +17,7 @@
         </div>
         </li>
 
-        <input type="radio" name="radio-btn" id="img-2" />
-        <li class="slide-container">
-            <div class="slide">
-              <img src="/static/model_2006/3.jpg" />
-            </div>
-        <div class="nav">
-          <label for="img-1" class="prev">&#x2039;</label>
-          <label for="img-3" class="next">&#x203a;</label>
-        </div>
-        </li>
-
-        <input type="radio" name="radio-btn" id="img-3" />
-        <li class="slide-container">
-            <div class="slide">
-              <img src="/static/model_2006/1.jpg" />
-            </div>
-        <div class="nav">
-          <label for="img-2" class="prev">&#x2039;</label>
-          <label for="img-4" class="next">&#x203a;</label>
-        </div>
-        </li>
-
-        <input type="radio" name="radio-btn" id="img-4" />
-        <li class="slide-container">
-            <div class="slide">
-              <img src="/static/model_2006/14.jpg" />
-            </div>
-        <div class="nav">
-          <label for="img-3" class="prev">&#x2039;</label>
-          <label for="img-5" class="next">&#x203a;</label>
-        </div>
-        </li>
-
-        <input type="radio" name="radio-btn" id="img-5" />
-        <li class="slide-container">
-            <div class="slide">
-              <img src="/static/model_2006/18.jpg" />
-            </div>
-        <div class="nav">
-          <label for="img-4" class="prev">&#x2039;</label>
-          <label for="img-6" class="next">&#x203a;</label>
-        </div>
-        </li>
+        
 
   </section>
 
