--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -104,9 +104,9 @@
                                     <li><a href="{{ url_for('airport_lighting') }}">Airport Lighting</a></li>
                                     <li><a href="https://elginmolded.com/">Elgin Molded Plastics</a></li>
                                     <li><a href="{{ url_for('highway_construction_lighting') }}">Construction Lighting</a></li>
-                                    <li><a href="{{ url_for('sister_companies') }}">Divisions</a></li>
+                                    <li><a href="https://www.linkedin.com/company/empco-lite/">Linkedin</a></li>
                                     <li><a href="{{ url_for('marine_lighting') }}">Marine Lighting</a></li>
-                                    <li><a href="{{ url_for('contact') }}">Our Team</a></li>
+                                    <li><a href="https://www.facebook.com/Empco-Lite-103848039076966 ">Facebook</a></li>
                                     <li><a href="{{ url_for('railroad_lighting') }}">Railroad Lighting</a></li>
                                 </ul>
                             </div>
