--- a/app/templates/lighting_types/airport_lighting.html
+++ b/app/templates/lighting_types/airport_lighting.html
@@ -3,18 +3,21 @@
 
 {% block content %}
 
+<div class=" whitesmoke pinside50 heading-container"> 
+    <h1 class="  heading-container mission-title ">Airport Lighting</h1>
+</div>
 
 <div class="wrapper product-line"> 
-    <div class="mt80 mb40"><h1>Airport Lighting</h1></div>
-    <div class="cols mb100">
+    <div class="mt80 mb40"><h1>Model 630</h1></div>
+<div class="cols mb100">
         
         <a href="{{ url_for('model_630_solar') }}">
               <div class="product-col" ontouchstart="this.classList.toggle('hover');">
                   <div class="container">
                       <div class="front" style="background-image: url(/static/airport_lighting/model630/Model630SolarAirportLight1.jpg)">
                           <div class="inner">
-                              <p>Model 630</p>
-                <span>Solar Airport Light</span>
+                              <p>Model 630 Solar</p>
+                <span>Airport Light</span>
                           </div>
                       </div>
                       <div class="back">
@@ -29,31 +32,35 @@
               
 
               <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('model2006D_Cell_Solar_Assist') }}">
+                <a href="{{ url_for('model_630') }}">
                   <div class="container">
-                      <div class="front" style="background-image: url(/static/airport_lighting/solarD2006/2006DCellSolarAssistAirportLight1.jpg)">
+                      <div class="front" style="background-image: url(/static/airport_lighting/Model630AirportLight.jpg)">
                           <div class="inner">
-                              <p>Model 2006 D</p>
-                <span>Solar Assist</span>
+                              <p>Model 630 
+                            </p>
+                    <span>Airport Light</span>
                           </div>
                       </div>
                       <div class="back">
                           <div class="inner">
-                              <p>Part # 99-L3-0600, 99-L3-0600R, Solar Assist99-L3-0600S,
-                                99-L3-0600SR</p>
+                              <p>Part # 98-63001R </p>
                           </div>
                       </div>
                     </div>
                 </a>
             </div>
+
+        <div class="wrapper product-line"> 
+            <div class="mt80 mb40"><h1>Model 601</h1></div>
+        <div class="cols mb100">
           
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
                 <a href="{{ url_for('model601_solar_airport_light') }}">
                   <div class="container">
                       <div class="front" style="background-image: url(/static/airport_lighting/solar601/Model601SolarAirportLight1.jpg)">
                           <div class="inner">
-                              <p>Model 601</p>
-                <span>Solar Airport</span>
+                              <p>Model 601 Solar</p>
+                <span> Airport Light</span>
                           </div>
                       </div>
                       <div class="back">
@@ -68,6 +75,8 @@
 
           </div>
    </div>
+</div>
+</div>
 
 
 
