--- a/app/templates/lighting_types/railroad_lighting.html
+++ b/app/templates/lighting_types/railroad_lighting.html
@@ -3,10 +3,13 @@
 
 {% block content %}
 
+<div class=" pinside50 whitesmoke heading-container"> 
+    <h1 class="  heading-container mission-title ">Railroad Lighting</h1>
+</div>
 
 <div class="wrapper product-line"> 
-    <div class="mt80 mb40"><h1>Railroad Lighting</h1></div>
-    <div class="cols mb100">
+    <div class="mt80 mb40"><h1>Blue Flag Lights</h1></div>
+<div class="cols mb100">
         
         <div class="product-col" ontouchstart="this.classList.toggle('hover');">
             <a href="{{ url_for('blue_flag_light') }}">
