--- a/app/templates/marine/barge_light.html
+++ b/app/templates/marine/barge_light.html
@@ -12,7 +12,7 @@
         <input type="radio" name="radio-btn" id="img-1" checked />
         <li class="slide-container">
         <div class="slide">
-          <img src="/static/marine/barge_light/BargeLightBottom.jpg" />
+          <img src="/static/marine/barge_light/PLLAndBargeLight.jpg" />
             </div>
         <div class="nav">
           <label for="img-6" class="prev">&#x2039;</label>
@@ -75,7 +75,7 @@
             
       
     <p class="model">Barge Light </p>
-    <p class="part-number"></p>
+    <p class="part-number">Part # 98-23400, 98-23400L, 98-23400LM, 98-23400M, 98-23400R, 98-23400RM</p>
     
     <div class="container flex-row space-between">
         
@@ -86,8 +86,14 @@
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-          <li></li>
-          <li>  </li>
+          <li>Tested and certified by US Coast Guard accepted independent laboratory. </li>
+          <li>Steady mode visibility exceeds 3 nautical miles. </li>
+          <li>Flashing light travels 2 nautical miles. </li>
+          <li>It comes standard with mounting magnets (70 lb. pull strength). </li>
+          <li>Steady mode will last 30 days using four 6-volt batteries. </li>
+          <li>Flash mode will last 120 days using four 6-volt batteries. </li>
+          <li>Steady on mode is available in red, green, and clear colors. </li>
+          <li>Flash mode is available in amber. </li>          
         </ul>
     </div>
   </section>
