--- a/app/templates/marine/dredge_light.html
+++ b/app/templates/marine/dredge_light.html
@@ -52,8 +52,8 @@
         <h1 class="product-description mb60">Product Description</h1>
             
       
-    <p class="model"> Model 100 Dredge Light</p>
-    <p class="part-number"></p>
+    <p class="model"> Dredge Light</p>
+    <p class="part-number">Part # 98-17400L</p>
     
     <div class="container flex-row space-between">
         
@@ -64,8 +64,16 @@
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-          <li></li>
-          <li> </li>
+          <li>Tested and certified by US Coast Guard accepted independent laboratory. </li>
+          <li>LEDs last 10,000 hours. </li>
+          <li>Steady burn light travels 2 nautical miles for up to 21 days. </li>
+          <li>Flashing light travels 2 nautical miles for up to 60 days. </li>
+          <li>Solid state circuitry turns light on at dusk and off at day-break. </li>
+          <li>Steady mode is available in red, green, and clear. </li>
+          <li>Flash mode is available in amber. </li>
+          <li> In steady mode the battery will last 20-25 days. </li>
+          <li>Flash mode will last 60 days. </li>
+          <li>Available with optional magnetic base. </li>          
         </ul>
     </div>
   </section>
