--- a/app/templates/marine/load_light.html
+++ b/app/templates/marine/load_light.html
@@ -64,8 +64,14 @@
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-          <li></li>
-          <li> </li>
+          <li>Exceeds US Coast Guard specifications. </li>
+          <li>Visibility exceeds one nautical mile. </li>
+          <li>Solar panels are internal, providing less chance for damage and malfunction. </li>
+          <li>It is a steady burn light that comes in clear, red, or green. </li>
+          <li>LEDs last 100,000 hours. </li>
+          <li>Lasts 7+ days in between charges. </li>
+          <li>Rechargeable battery should last 2-3 years depending on moisture corrosion. </li>
+          <li>Comes standard with a magnetic base and a carry handle. </li>          
         </ul>
     </div>
   </section>
