--- a/app/templates/marine/pilot_location_light.html
+++ b/app/templates/marine/pilot_location_light.html
@@ -42,8 +42,7 @@
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-          <li></li>
-          <li> </li>
+          <li>Optional Pilot Location Light that attaches to the amber barge light. </li>
         </ul>
     </div>
   </section>
