--- a/app/templates/marine/solar_dredge_light.html
+++ b/app/templates/marine/solar_dredge_light.html
@@ -76,8 +76,17 @@
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-          <li></li>
-          <li> </li>
+          <li>Tested and certified by US Coast Guard accepted independent laboratory. </li>
+          <li>LEDs last 10,000 hours. </li>
+          <li>Steady burn light travels 2 nautical miles for up to 21 days. </li>
+          <li>Flashing light travels 2 nautical miles for up to 60 days. </li>
+          <li>Solid state circuitry turns light on at dusk and off at day-break. </li>
+          
+          <li>Available in red, clear, and amber. </li>
+          <li>Lasts 7 days in between charges. </li> 
+          <li>Rechargeable battery should last 2-3 years depending on moisture corrosion. </li>
+          <li>Available with magnetic base, 2” threaded pipe attachment, or a flat base attachment. </li>
+          
         </ul>
     </div>
   </section>
