--- a/app/templates/process.html
+++ b/app/templates/process.html
@@ -7,16 +7,16 @@
 <section id="process">
   <div class="row align-items-center">
     <div class="col-50">
-      <img src="/static/pexels-adrien-olichon-2387428.jpg" alt="image">
+      <img src="/static/plant_pictures/IMG_7461_Fotor.jpg" alt="image">
     </div>
     <div class="col-50">
       <article>
-        <h1>Our Process</h1>
-        <h2>"Old World" Skilled Labor</h2>
-          <p>We wanted the highest quality products, so we made them ourselves. All products at AKT and Empco-Lite are made at our Elgin Molded Facility. We've been doing this for over 70 years. That's how we know our process works.  </p>
-          <p>Our tool makers have years of experience,  founded on the principles learned in the tradition of "Old World" apprenticeship and training. 
-          These tool makers also utilize CNC and EDM technology to produce quality injection molds. With their backgrounds in mold construction and exceptional pride in their work, our people have gained respect and earned a reputation of embodying the expertise required to meet the demand of our customers.
-          </p>          
+        
+        <h2>The Empco-Lite Process</h2>
+          <p>Here at Empco-Lite, we strive to be the best. We have been leaders in the industry since the 1960s. We started out in the construction lighting industry and since then have expanded our product lines into the marine lighting, airport lighting, and railroad lighting industries. Whether it's anything from barricade lighting to barge lighting and everything in between, Empco-Lite assures its customers they will receive the highest quality products and the best customer service. All of our products are proudly made and assembled in America. </p>
+          <p>All of our plastic products come from our injection molding division Elgin Molded Plastics, a custom injection molder that produces top-quality products since 1949. Elgin Molded Plastics has performed all kinds of custom molding jobs and can handle jobs of any size, and are always looking to add new business. Their facility is equipped with injection molding presses ranging in size from 85 tons to 760 tons, equipped with wide platens, and robots.</p>  
+          <p>We have another division AKT Reflectors that specializes in reflectors and guardrail delineators. AKT has been supplying construction companies, departments of transportation, and any other highway safety companies looking for highway safety solutions. </p>  
+          <p>For all your construction lighting products choose Empco-Lite. </p>      
       </article>
     </div>
   </div>
