--- a/app/templates/railroad/blue_flag_light.html
+++ b/app/templates/railroad/blue_flag_light.html
@@ -42,7 +42,10 @@
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-
+          <li>Battery life is 60 days in either flash mode or steady mode. </li>
+          <li>Comes with a carry handle and an S hook. </li>
+          <li>Available with an optional magnetic base. </li>
+          
 
         </ul>
     </div>
