--- a/app/templates/railroad/blue_flag_strobe_light.html
+++ b/app/templates/railroad/blue_flag_strobe_light.html
@@ -42,7 +42,7 @@
             
       
     <p class="model">Blue Flag Strobe Light</p>
-    <p class="part-number">Available with Handle</p>
+    <p class="part-number"></p>
     
     <div class="container flex-row space-between">
         
@@ -53,7 +53,11 @@
     <p class="specification">Specification:</p>
       
         <ul class="specifications">
-
+          <li>Battery lasts 4-5 days using two 6-volt batteries. </li>
+          <li>Comes in strobe flash. </li>
+          <li>Comes standard with a carry handle. </li>
+          <li>Available with an optional magnetic base. </li>
+          
         </ul>
     </div>
   </section>
