--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -229,10 +229,10 @@
 
 
     <div class="big-image-quality">
-        <div class="overlay">
+        <div class="overlay-product-line">
             <div class="product-line-container">
-                <h3 class="">Quality With Integrity</h3>
-                <a href="{{ url_for('process') }}" class="btn">Learn More</a>
+                <h1 class="uppercase">Quality with Integrity</h1>
+                <a href="{{ url_for('process') }}" class="btn-3">Learn More</a>
             </div>
 
         </div>
