--- a/app/templates/lighting_types/highway_construction_lighting.html
+++ b/app/templates/lighting_types/highway_construction_lighting.html
@@ -241,9 +241,9 @@
 
             <!-- audible Device model 400 ADA -->
             <div class="product-col" ontouchstart="this.classList.toggle('hover');">
-                <a href="{{ url_for('audible_device_model_400_ADA') }}">
+                <a href="{{ url_for('audible400ml') }}">
                     <div class="container">
-                        <div class="front" style="background-image: url(/static/highway/audible_device_ADA/Model400ADA3.jpg)">
+                        <div class="front" style="background-image: url(/static/highway/Model400ML-2ADADEVICE.jpg)">
                             <div class="inner">
                                 <p>Model 400ML</p>
                         <span>Audible Device</span>
@@ -251,7 +251,7 @@
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p></p>
+                                <p>Part # 98-10920</p>
                             </div>
                         </div>
                     </div>
