terms of use and privacy policy

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -48,21 +48,21 @@
     <section class="section--dark text-center pinside80">
         <div class="about-container">
         <div class="col-3">
-            <i class="fa fa-bolt mb60"></i>
+            <i class=" mb60"></i>
             <h3>
             Elgin Molded
             </h3>
             <p>Where it all began (Custom Injection Molding)</p>
         </div>
         <div class="col-3 ">
-            <i class="fa fa-bolt mb60"></i>
+            <i class=" mb60"></i>
             <h3>
             Empco-Lite 
             </h3>
             <p>Airport, Marine, and Railroad Lighting</p>
         </div>
         <div class="col-3 ">
-            <i class="fa fa-bolt mb60"></i>
+            <i class=" mb60"></i>
             <h3>
             AKT Corporation 
             </h3>
