--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -140,8 +140,8 @@
                             <div class="footer-menu">
                                 <ul>
                                     <li><a href="{{ url_for('index') }}">Home</a></li>
-                                    <li><a href="{{ url_for('contact') }}">Contact</a></li>
-                                    <li><a href="{{ url_for('about') }}">About</a></li>
+                                    <li><a href="{{ url_for('privacypolicy') }}">Privacy Policy</a></li>
+                                    <li><a href="{{ url_for('termsofuse') }}">Terms of Use</a></li>
                                 </ul>
                             </div>
                         </div>
